// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON imports babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd
  const data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  }; // @ts-expect-error resolveJsonModule is not on

  const keys = Object.keys(data);
  _exports.keys = keys;
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd
  const data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  }; // @ts-expect-error resolveJsonModule is not on

  const keys = Object.keys(data);
  _exports.keys = keys;
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

var keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
var data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

var keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  }; // @ts-expect-error resolveJsonModule is not on

  var keys = Object.keys(data);
  _exports.keys = keys;
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.keys = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd
  const data = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  }; // @ts-expect-error resolveJsonModule is not on

  const keys = Object.keys(data);
  _exports.keys = keys;
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`JSON imports babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
const data = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
}; // @ts-expect-error resolveJsonModule is not on

const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: ()=>keys
    });
    const data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    const keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: ()=>keys
    });
    const data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    const keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
var keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
var data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
var keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: function() {
            return keys;
        }
    });
    var data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    var keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    Object.defineProperty(exports, "keys", {
        enumerable: true,
        get: ()=>keys
    });
    const data = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    // @ts-expect-error resolveJsonModule is not on
    const keys = Object.keys(data);
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { keys } = data;",
]
`;

exports[`JSON imports swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
exports.keys = keys;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`JSON imports swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
const data = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
// @ts-expect-error resolveJsonModule is not on
const keys = Object.keys(data);
export { keys };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
